--- a/book.html
+++ b/book.html
@@ -35,7 +35,7 @@
 
     <div class="container-fluid">
             <div class="row">
-                <div id="conjunto" class="col-sm-12 text-right"> 
+                <div id="conjunto" class="col-xs-12 col-sm-4 col-sm-push-8 text-right"> 
                         <div id="menu">
                             <div class="collapse navbar-collapse" id="myNavbar">
                                 <aside class="menu_lateral" role="menu">
@@ -50,83 +50,80 @@
                             </div>    
                     </div>
                 </div>
+
+<!-- COMIENZO SLIDER -->
+
+    <div id="div_slider" class="col-xs-12 col-sm-7 col-sm-pull-4 col-sm-offset-1">            
+        <div id="c-slider" >
+                <div id="slider" role="slider">
+                    <section>
+                        <img src="img/alvaross1.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/alvaross2.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/alvaross4.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/alvaross5.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/alvaross6.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/angelah1.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/angelah2.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/angelah3.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/angelah4.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/angelah5.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/angelah6.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/angelah7.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/angelah10.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/cclee1.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/jesusclares2.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/jesusclares3.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/jesusclares4.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                    <section>
+                        <img src="img/jesusclares5.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
+                    </section>
+                </div>
+
+                <div id="btn-prev" tabindex="1" role="button" aria-label="next">&#60;</div>
+                <div id="btn-next" tabindex="2" role="button" aria-label="previous">&#62;</div>
+            </div>
+        </div>
+            <script src="js/slider.js"></script>
+
+<!-- FIN SLIDER -->
             </div>
     </div>
 
 <!-- FIN DE NOMBRE Y MENU -->
 
-
-<!-- COMIENZO SLIDER -->
-
-
-        <div class="container-fluid">
-            <div class="row">
-                    <div id="c-slider">
-                        <div id="slider" role="slider">
-                            <section>
-                                <img src="img/alvaross1.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/alvaross2.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/alvaross4.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/alvaross5.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/alvaross6.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/angelah1.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/angelah2.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/angelah3.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/angelah4.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/angelah5.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/angelah6.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/angelah7.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/angelah10.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/cclee1.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/jesusclares2.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/jesusclares3.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/jesusclares4.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                            <section>
-                                <img src="img/jesusclares5.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
-                            </section>
-                        </div>
-
-                        <div id="btn-prev" tabindex="1" role="button" aria-label="next">&#60;</div>
-                        <div id="btn-next" tabindex="2" role="button" aria-label="previous">&#62;</div>
-                    </div>
-            </div>
-        <script src="js/slider.js"></script>
-       
-
-<!-- FIN SLIDER -->
 
 <!-- FOOTER-->
 
