--- a/cv.html
+++ b/cv.html
@@ -34,7 +34,7 @@
 
     <div class="container-fluid">
             <div class="row">
-                <div id="conjunto" class="col-sm-12 text-right"> 
+                <div id="conjunto" class="col-xs-12 col-sm-4 col-sm-push-8 text-right"> 
                         <div id="menu">
                             <div class="collapse navbar-collapse" id="myNavbar">
                                 <aside class="menu_lateral" role="menu">
@@ -49,77 +49,72 @@
                             </div>    
                     </div>
                 </div>
+
+
+                <div id="curriculum" class="col-xs-12 col-sm-7 col-sm-pull-4 col-sm-offset-1" role="main" aria-label="curriculum">
+
+                        <div>
+                            <h3>Televisión</h3>
+                            <ul>
+                                <li><b>"LA VERDAD"</b> - Telecinco</li>
+                                <li><b>"CENTRO MÉDICO"</b> - TVE</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Teatro</h3>
+                            <ul>
+                                <li><b>"INFERNO"</b> - Dir. Julián Fuentes Reta</li>
+                                <li><b>"LORQUIANAS"</b> - Dir. Jorge Muriel</li>
+                                <li><b>"PROMESAS"</b> - Dir. Paula Soldevilla</li>
+                                <li><b>"LA RATONERA"</b> - Dir. Sixto Cid</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Cortometrajes</h3>
+                            <ul>
+                                <li><b>"REPLAY"</b> - Dir. Christian Vélez</li>
+                                <li><b>"PANTOMIME"</b> - Dir. Laura del Rio</li>
+                                <li><b>"LACHA"</b> - Dir. Ignacio Arrue</li>
+                                <li><b>"¿QUÉ HACES AQUÍ?"</b> - Dir. Unai Mateo</li>
+                                <li><b>"DESMOTIVACIONES DOMÉSTICAS"</b> - Dir. Jennifer Da Silva</li>
+                                <li><b>"GASOLINA SIN PLOMO"</b> - Dir. Guillermo Dieste</li>
+                                <li><b>"CUANDO CALLAN LAS MIRADAS"</b> - Dir. Christian Vélez</li>
+                                <li><b>"1992"</b> - Dir. Adrián Sosa</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Web Series</h3>
+                            <ul>
+                                <li><b>"EL MALETÍN MAX FACTOR"</b> - Dir. Enrique Caruncho</li>
+                                <li><b>"EL MALETÍN 2 MAX FACTOR"</b> - Dir Juana Macías</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Formación</h3>
+                            <ul>
+                                <li>Grado oficial de artes escénicas en la <strong>Escuela Universitaria de Artes y Espectáculos TAI</strong></li>
+                                <li>Curso regular en el <strong>Estudio Corazza para el actor</strong></li>
+                                <li>Curso intensivo de Interpretación ante la cámara con <strong>Eduardo Chapero Jackson</strong></li>
+                                <li>Taller para el actor con Ana García en <strong>Estudio Corazza para el actor</strong></li>
+                                <li>Máscaras de la Comedia del arte con <strong>Filippo Verladita</strong></li>
+                                <li>Solfeo, canto y violín</li>
+                                <li>Ballet clásico y flamenco</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Idiomas</h3>
+                            <ul>
+                                <li>Castellano</li>
+                                <li>Inglés</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
             </div>
         </div>
 
 <!-- FIN DE NOMBRE Y MENU -->
-
-
-<div class="container-fluid">
-    <div class="row">
-
-            <div id="curriculum" role="main" aria-label="curriculum">
-
-                    <div>
-                        <h3>Televisión</h3>
-                        <ul>
-                            <li><b>"LA VERDAD"</b> - Telecinco</li>
-                            <li><b>"CENTRO MÉDICO"</b> - TVE</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Teatro</h3>
-                        <ul>
-                            <li><b>"INFERNO"</b> - Dir. Julián Fuentes Reta</li>
-                            <li><b>"LORQUIANAS"</b> - Dir. Jorge Muriel</li>
-                            <li><b>"PROMESAS"</b> - Dir. Paula Soldevilla</li>
-                            <li><b>"LA RATONERA"</b> - Dir. Sixto Cid</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Cortometrajes</h3>
-                        <ul>
-                            <li><b>"REPLAY"</b> - Dir. Christian Vélez</li>
-                            <li><b>"PANTOMIME"</b> - Dir. Laura del Rio</li>
-                            <li><b>"LACHA"</b> - Dir. Ignacio Arrue</li>
-                            <li><b>"¿QUÉ HACES AQUÍ?"</b> - Dir. Unai Mateo</li>
-                            <li><b>"DESMOTIVACIONES DOMÉSTICAS"</b> - Dir. Jennifer Da Silva</li>
-                            <li><b>"GASOLINA SIN PLOMO"</b> - Dir. Guillermo Dieste</li>
-                            <li><b>"CUANDO CALLAN LAS MIRADAS"</b> - Dir. Christian Vélez</li>
-                            <li><b>"1992"</b> - Dir. Adrián Sosa</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Web Series</h3>
-                        <ul>
-                            <li><b>"EL MALETÍN MAX FACTOR"</b> - Dir. Enrique Caruncho</li>
-                            <li><b>"EL MALETÍN 2 MAX FACTOR"</b> - Dir Juana Macías</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Formación</h3>
-                        <ul>
-                            <li>Grado oficial de artes escénicas en la <strong>Escuela Universitaria de Artes y Espectáculos TAI</strong></li>
-                            <li>Curso regular en el <strong>Estudio Corazza para el actor</strong></li>
-                            <li>Curso intensivo de Interpretación ante la cámara con <strong>Eduardo Chapero Jackson</strong></li>
-                            <li>Taller para el actor con Ana García en <strong>Estudio Corazza para el actor</strong></li>
-                            <li>Máscaras de la Comedia del arte con <strong>Filippo Verladita</strong></li>
-                            <li>Solfeo, canto y violín</li>
-                            <li>Ballet clásico y flamenco</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Idiomas</h3>
-                        <ul>
-                            <li>Castellano</li>
-                            <li>Inglés</li>
-                        </ul>
-                    </div>
-                </div>
-
-
-    </div>
-</div>
 
 
 
