--- a/representacion.html
+++ b/representacion.html
@@ -36,18 +36,7 @@
     <div class="container-fluid">
             <div class="row">
 
-                <div id="repre" class="col-xs-12 col-sm-7 col-sm-offset-1" role="main">
-                        <h3>KURANDA</h3>
-                        <p>Kuranda nació en 1971 del amor por la actuación y sobre todo, para aquellas personas que lo convierten en el trabajo de sus vidas, los actores. Este amor fue inculcado en nuestra fundadora, Katrina Bayonas, durante su infancia por sus padres, que eran también actores.</p>
-                        <p>Ellos le hicieron consciente de los retos a los que los artistas se enfrentan y el coraje necesario para perseguir la actuación como profesión.</p>
-                        <p>Kuranda fue creada como un lugar para honrar y apoyar a los actores en los obstáculos con los que inevitablemente se topan en su camino hacia el éxito.</p>
-                        <p>Nosotros en Kuranda creemos que el arte de un actor no debe ser nunca comprometido por el interés comercial. Pasión, dedicación y devoción a la constante investigación y estudio son requisitos de nuestros clientes.</p>
-                        <p>El equipo de Kuranda dedica sus vidas a proporcionar los servicios necesarios para que estos hombres y mujeres de talento excepcional alcancen sus objetivos.</p>
-                        <p>El trabajo de nuestro cliente es ser el mejor actor que pueda llegar a ser. El nuestro,  asegurarnos de que recibe la oportunidad de crecer artística y profesionalmente, eliminando todas las distracciones de su camino. Los actores de Kuranda actúan, nosotros hacemos el resto. Esta es nuestra misión y nuestro privilegio.</p>
-                        <a href="https://www.kurandaweb.com/">Visita la web</a>
-                    </div>
-
-                    <div id="conjunto" class="col-xs-12 col-sm-4 text-right"> 
+                    <div id="conjunto" class="col-xs-12 col-sm-4 col-sm-push-8 text-right"> 
                             <div id="menu">
                                 <div class="collapse navbar-collapse" id="myNavbar">
                                     <aside class="menu_lateral" role="menu">
@@ -62,6 +51,19 @@
                                 </div>    
                         </div>
                     </div>
+
+
+                <div id="repre" class="col-xs-12 col-sm-7 col-sm-pull-4 col-sm-offset-1" role="main">
+                        <h3>KURANDA</h3>
+                        <p>Kuranda nació en 1971 del amor por la actuación y sobre todo, para aquellas personas que lo convierten en el trabajo de sus vidas, los actores. Este amor fue inculcado en nuestra fundadora, Katrina Bayonas, durante su infancia por sus padres, que eran también actores.</p>
+                        <p>Ellos le hicieron consciente de los retos a los que los artistas se enfrentan y el coraje necesario para perseguir la actuación como profesión.</p>
+                        <p>Kuranda fue creada como un lugar para honrar y apoyar a los actores en los obstáculos con los que inevitablemente se topan en su camino hacia el éxito.</p>
+                        <p>Nosotros en Kuranda creemos que el arte de un actor no debe ser nunca comprometido por el interés comercial. Pasión, dedicación y devoción a la constante investigación y estudio son requisitos de nuestros clientes.</p>
+                        <p>El equipo de Kuranda dedica sus vidas a proporcionar los servicios necesarios para que estos hombres y mujeres de talento excepcional alcancen sus objetivos.</p>
+                        <p>El trabajo de nuestro cliente es ser el mejor actor que pueda llegar a ser. El nuestro,  asegurarnos de que recibe la oportunidad de crecer artística y profesionalmente, eliminando todas las distracciones de su camino. Los actores de Kuranda actúan, nosotros hacemos el resto. Esta es nuestra misión y nuestro privilegio.</p>
+                        <a href="https://www.kurandaweb.com/">Visita la web</a>
+                    </div>
+
 
             </div>
     </div>
