--- a/showreel.html
+++ b/showreel.html
@@ -35,7 +35,7 @@
 
     <div class="container-fluid">
             <div class="row">
-                <div id="conjunto" class="col-sm-12 text-right"> 
+                <div id="conjunto" class="col-xs-12 col-sm-4 col-sm-push-8 text-right"> 
                         <div id="menu">
                             <div class="collapse navbar-collapse" id="myNavbar">
                                 <aside class="menu_lateral" role="menu">
@@ -51,14 +51,13 @@
                     </div>
                 </div>
 
-                <div id="video" aria-label="video" class="col-xs-12">
+                <div id="video" aria-label="video" class="col-xs-12 col-sm-7 col-sm-pull-4 col-sm-offset-1">
                         <h3>SHOWREEL</h3>
                     
                     <div class="col-xs-12">
-                        <iframe  src="https://www.youtube.com/embed/pvha6AJthbY?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/pvha6AJthbY?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </div>
-                    </div>
-
+                </div>
 
             </div>
     </div>
