martes en clase

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div id="menu">
                             <div class="collapse navbar-collapse" id="myNavbar">
                                 <aside class="menu_lateral" role="menu">
-                                    <ul class="list-unstyled" id="menu_lista">
+                                    <ul class="list-unstyled" id="menu_lista_index">
                                         <a href="index.html" aria-label="index" role="menuitem"><li>Inicio</li></a>
                                         <a href="book.html" aria-label="book" role="menuitem"><li>Book</li></a>
                                         <a href="showreel.html" aria-label="showreel" role="menuitem"><li>Showreel</li></a>
