--- a/cv.html
+++ b/cv.html
@@ -51,17 +51,17 @@
                 </div>
 
 
-                <div id="curriculum" class="col-xs-12 col-sm-7 col-sm-pull-4 col-sm-offset-1" role="main" aria-label="curriculum">
+                <div id="curriculum" class="col-xs-12 col-sm-8 col-sm-pull-4" role="main" aria-label="curriculum">
 
-                    <div class="container">
-                        <div class="cont col-xs-12 col-sm-6 float-left">
+                    <div class="row">
+                        <div class="cont col-xs-12 col-sm-5 col-sm-offset-1">
                             <h3>Televisión</h3>
                             <ul>
                                 <li><b>"LA VERDAD"</b> - Telecinco</li>
                                 <li><b>"CENTRO MÉDICO"</b> - TVE</li>
                             </ul>
                         </div>
-                        <div class="cont col-xs-12 col-sm-6">
+                        <div class="cont col-xs-12 col-sm-5 col-sm-offset-1">
                             <h3>Teatro</h3>
                             <ul>
                                 <li><b>"INFERNO"</b> - Dir. Julián Fuentes Reta</li>
@@ -70,7 +70,10 @@
                                 <li><b>"LA RATONERA"</b> - Dir. Sixto Cid</li>
                             </ul>
                         </div>
-                        <div class="cont col-xs-12 col-sm-6">
+</div>
+<div class="row">
+                    
+                        <div class="cont col-xs-12 col-sm-5 col-sm-offset-1">
                             <h3>Cortometrajes</h3>
                             <ul>
                                 <li><b>"REPLAY"</b> - Dir. Christian Vélez</li>
@@ -83,14 +86,16 @@
                                 <li><b>"1992"</b> - Dir. Adrián Sosa</li>
                             </ul>
                         </div>
-                        <div class="cont col-xs-12 col-sm-6">
+                        <div class="cont col-xs-12 col-sm-5 col-sm-offset-1">
                             <h3>Web Series</h3>
                             <ul>
                                 <li><b>"EL MALETÍN MAX FACTOR"</b> - Dir. Enrique Caruncho</li>
                                 <li><b>"EL MALETÍN 2 MAX FACTOR"</b> - Dir Juana Macías</li>
                             </ul>
                         </div>
-                        <div class="cont col-xs-12 col-sm-6">
+                    </div>
+<div class="row">
+                        <div class="cont col-xs-12 col-sm-5 col-sm-offset-1">
                             <h3>Formación</h3>
                             <ul>
                                 <li>Grado oficial de artes escénicas en la <strong>Escuela Universitaria de Artes y Espectáculos TAI</strong></li>
@@ -102,7 +107,7 @@
                                 <li>Ballet clásico y flamenco</li>
                             </ul>
                         </div>
-                        <div class="cont col-xs-12 col-sm-6">
+                        <div class="cont col-xs-12 col-sm-5 col-sm-offset-1">
                             <h3>Idiomas</h3>
                             <ul>
                                 <li>Castellano</li>
