--- a/showreel.html
+++ b/showreel.html
@@ -24,9 +24,9 @@
         <div class="row">
             <div class="navbar-header col-xs-12 text-right">
                 <button id="boton-menu" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <span id="bar1" class="icon-bar"></span>
+                    <span id="bar2" class="icon-bar"></span>
+                    <span id="bar3" class="icon-bar"></span>
                 </button>
             </div>
 
