--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
             <div class="navbar-header col-xs-12 text-right">
-                <button id="boton-menu" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <button id="boton-menu" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" onclick="myFunction(this)">
                     <span id="bar1" class="icon-bar"></span>
                     <span id="bar2" class="icon-bar"></span>
                     <span id="bar3" class="icon-bar"></span>
@@ -69,5 +69,10 @@
 
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+    //animación barras menu
+    function myFunction(x) {
+    x.classList.toggle("change");}
+    </script>
 </body>
 </html>
